# hw3-spatial-ai

./: .gitignore  README.md  TASK1_STATUS.md  environment.yml  pyproject.toml  作业说明.md
configs/: act_env_a.yaml  act_env_a_real.yaml  act_env_a_smoke.yaml  act_env_abc.yaml  act_env_abc_real.yaml  fusion_scene.yaml  paths.yaml  text_to_3d.yaml
report/: main.tex
report/tables/: act_env_a_train_metrics.csv  act_env_abc_train_metrics.csv  act_results.csv
scripts/: check_project.sh  check_real_3d_env.sh  env_colmap_blender.sh  env_threestudio.sh  eval_act_env_d.sh  fuse_scene_blender.sh  run_3dgs_background.sh  run_object_a_3dgs.sh  run_threestudio_text3d.sh  run_zero123_image3d.sh  setup_external_repos.sh  train_act_env_a.sh  train_act_env_abc.sh
src/hw3_spatial_ai/: __init__.py  config.py
src/hw3_spatial_ai/calvin/: build_abc_lerobot.py  inspect_dataset.py  prepare_lerobot_splits.py
src/hw3_spatial_ai/lerobot/: eval_act.py  launch_act.py  launch_act.py.bak  offline_eval_act.py  summarize_runs.py
src/hw3_spatial_ai/scene/: find_mipnerf_scene.py  write_blender_fusion.py
